# MovementObectExtract

./: CMakeLists.txt  README.md
extract_obj_lib/: CMakeLists.txt
extract_obj_lib/header/private/: extract_obj_auto_param.h  extract_obj_auto_param_color.h  extract_obj_auto_param_contrast.h  extract_obj_auto_param_daynight.h  extract_obj_auto_param_noise.h  extract_obj_auto_param_scense.h  extract_obj_auto_param_scensechange.h  extract_obj_auto_param_startframe.h  extract_obj_auto_param_textregion.h  extract_obj_bgm.h  extract_obj_imgprocess.h  extract_obj_lock.h  extract_obj_log.h  extract_obj_private.h
extract_obj_lib/header/public/: extract_obj.h  extract_obj_config.h
extract_obj_lib/src/: extract_obj.cpp  extract_obj_auto_param.cpp  extract_obj_auto_param_color.cpp  extract_obj_auto_param_contrast.cpp  extract_obj_auto_param_daynight.cpp  extract_obj_auto_param_noise.cpp  extract_obj_auto_param_scene.cpp  extract_obj_auto_param_scenechange.cpp  extract_obj_auto_param_startframe.cpp  extract_obj_auto_param_textregion.cpp  extract_obj_bgm.cpp  extract_obj_imgprocess.cpp  extract_obj_log.cpp
samples/: CMakeLists.txt  common.cpp  common.h  obj_extract.cpp
